fixed issue with migrate data mailer and layout issue on form

--- a/stash_engine/public/demo/css/ui.css
+++ b/stash_engine/public/demo/css/ui.css
@@ -4381,12 +4381,14 @@ html.no-details .o-showhide__summary {
 .c-input__emailcode-text {
   -webkit-box-flex: 2;
       -ms-flex: 2 1;
-          flex: 2 1; }
+          flex: 2 1;
+  width: 350px; }
 
 .c-input__emailcode-button {
   -webkit-box-flex: 1;
       -ms-flex: 1 1;
-          flex: 1 1; }
+          flex: 1 1;
+  width: 180px; }
 
 .c-input__emailcode-spacer {
   -webkit-box-flex: 1;
